# cv-random

./: .gitignore  detection.ipynb  pyproject.toml  segmentation.ipynb  test.ipynb
