[tool.poetry]
name = "cv-random"
version = "0.1.0"
description = ""
authors = ["AlesKas <ales.kasparek@email.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
torch = "^2.4.1"
torchvision = "^0.19.1"
pycocotools = "^2.0.8"
requests = "^2.32.3"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
